--- a/index.css
+++ b/index.css
@@ -8,15 +8,13 @@
   background-color:rgba(180,180,180,0.08);
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
   width: 80%;
   height: 80%;
   margin:10%;
 }
 
 .div-form div{
-  padding:10px;
+  padding: 0px 0px 10px 5px;
   width:100%;
 }
 
@@ -25,11 +23,6 @@
   border: solid 1px red;
   background-color:red;
   
-}
-
-.botones{
-  display: flex;
-  justify-content: center;
 }
 
 .encabezado{
