--- a/index.css
+++ b/index.css
@@ -1,30 +1,30 @@
-*{
+* {
   margin: 0;
   padding: 0;
 }
 
-.div-form{
+.div-form {
   border: solid 1px lightgray;
-  background-color:rgba(180,180,180,0.08);
+  background-color: rgba(180, 180, 180, 0.08);
   display: flex;
   flex-wrap: wrap;
   width: 80%;
   height: 80%;
-  margin:10%;
+  margin: 10%;
 }
 
-.div-form div{
+.div-form div {
   padding: 0px 0px 10px 5px;
-  width:100%;
+  width: 100%;
 }
 
-.div-riesgo{
-  display:flex;
+.div-riesgo {
+  display: flex;
   border: solid 1px red;
-  background-color:red;
-  
+  background-color: red;
+
 }
 
-.encabezado{
+.encabezado {
   border: solid 1px lightgray;
 }
